put endpoint for Assessment implementation